bridge/base/0-choco-namespace.yaml
#! 0-choco-namespace.yaml
# Generated code, do not edit
apiVersion: v1
kind: Namespace
metadata:
    name: choco
    labels:
        com.docker.compose.project: choco
