bridge/base/choco-app-expose.yaml
#! choco-app-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: choco-app
    namespace: choco
    labels:
        com.docker.compose.project: choco
        com.docker.compose.service: choco-app
spec:
    selector:
        com.docker.compose.project: choco
        com.docker.compose.service: choco-app
    ports:
        - name: choco-app-3000
          port: 3000
          targetPort: choco-app-3000
