bridge/base/choco-app-service.yaml
# check if there is at least one published port

#! choco-app-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: choco-app-published
    namespace: choco
    labels:
        com.docker.compose.project: choco
        com.docker.compose.service: choco-app
spec:
    selector:
        com.docker.compose.project: choco
        com.docker.compose.service: choco-app
    ports:
        - name: choco-app-3000
          port: 3000
          protocol: TCP
          targetPort: choco-app-3000
